--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Anubhav Chat App">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Beautiful Chat App</title>
+  <title>Anubhav Chat App</title>
   <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="style.css">
